--- a/02/2.2/LinearLayoutTest/res/layout/main.xml
+++ b/02/2.2/LinearLayoutTest/res/layout/main.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- android:orientation="horizontal":水平
+	 android:orientation="vertical":垂直 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="horizontal"
 	android:layout_width="fill_parent"
