--- a/02/2.2/RelativeLayoutTest/res/layout/main.xml
+++ b/02/2.2/RelativeLayoutTest/res/layout/main.xml
@@ -13,6 +13,7 @@
 	android:layout_centerInParent="true"
 	/>
 <!-- 定义该组件位于view01组件的上方 -->
+<!-- alignLeft:与该组件左边界对齐 -->
 <TextView 
 	android:id="@+id/view02"
 	android:layout_width="wrap_content" 
@@ -40,6 +41,7 @@
 	android:layout_alignTop="@id/view01"
 	/>
 <!-- 定义该组件位于view01组件的右边 -->
+<!-- alignTop:与该组件上边界对齐 -->
 <TextView 
 	android:id="@+id/view05"
 	android:layout_width="wrap_content" 
